# mcp-homelab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.docker.yaml  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt  server.py  start-mcp.cmd
.github/: dependabot.yml
.github/agents/: claude.agent.md  codex.agent.md  docs.agent.md  review.agent.md  security.agent.md
.github/instructions/: agent-workflow.instructions.md  code-review.instructions.md
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  publish-dev.yml  publish-release.yml
core/: config.py  oauth_provider.py  opnsense_api.py  proxmox_api.py  ssh.py
deploy/: DEPLOYMENT-GUIDE.md  README.md  deploy.py  mcp-homelab.service
docs/: design-principles.md
guides/: README.md  docker-deployment.md  hosted-mode.md  proxmox-cloudflare-tunnel.md  proxmox-vm-cloudflare-tunnel.md
mcp_homelab/: cli.py  server.py
mcp_homelab/core/: api_client.py  auth.py  config.py  login.py  oauth_provider.py  opnsense_api.py  proxmox_api.py  ssh.py
mcp_homelab/data/: mcp-homelab.service
mcp_homelab/setup/: check.py  client_setup.py  config_writer.py  install.py  node_setup.py  opnsense_setup.py  prompts.py  proxmox_setup.py  roles.py  ssh_helpers.py  ssh_provisioning.py
mcp_homelab/tools/: __init__.py  context_gen.py  discovery.py  nodes.py  opnsense.py  proxmox.py
tests/: conftest.py
tests/unit/: test_api_setup.py  test_auth.py  (+14 more)
tools/: context_gen.py  discovery.py  nodes.py  opnsense.py  proxmox.py
